--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "note_of_whispering_mongja",
   "version": "0.0.1",
   "description": "transcription project with whisperAPI",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/sangja21/note_of_whispering_mongja.git",
   "author": "sangja21 <ta7538@naver.com>",
   "license": "MIT",
@@ -11,7 +11,9 @@
     "dev": "node src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
     "openai": "^4.85.3"
-  }
+  },
+  "type": "module"
 }
